--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -100,13 +100,6 @@ steps:
         command: "julia --color=yes --project=test test/test_cases/run_3d_baroclinic_wave.jl"
         artifact_paths: "test/test_cases/run_3d_baroclinic_wave/*"
 
-  - group: "Box Examples"
-    steps:
-
-      - label: ":package: Single column physics - EDMF"
-        command: "julia --color=yes --project=examples examples/TCexample.jl"
-        artifact_paths: "examples/output/TCexample/*"
-
   - group: "MPI Examples"
     steps:
 
@@ -132,7 +125,7 @@ steps:
       - label: ":computer: held suarez (ρθ)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --energy_name rhotheta --forcing held_suarez --job_id sphere_held_suarez_rhotheta --regression_test true"
         artifact_paths: "sphere_held_suarez_rhotheta/*"
-      
+
       - label: ":computer: held suarez (ρe) third order"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --upwinding third_order --job_id sphere_held_suarez_rhoe_third"
         artifact_paths: "sphere_held_suarez_rhoe_third/*"
@@ -167,7 +160,7 @@ steps:
       - label: ":computer: held suarez (ρe_int)"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --job_id sphere_held_suarez_rhoe_int --regression_test true"
         artifact_paths: "sphere_held_suarez_rhoe_int/*"
-      
+
       - label: ":computer: held suarez (ρe) equilmoist"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --forcing held_suarez --microphy 0M --job_id sphere_held_suarez_rhoe_equilmoist --regression_test true --dt 200secs --t_end 5days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist/*"
@@ -175,6 +168,10 @@ steps:
       - label: ":computer: aquaplanet (ρe) equilmoist gray radiation"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --rad gray --microphy 0M --job_id sphere_aquaplanet_rhoe_equilmoist_gray --dt 200secs --t_end 5days"
         artifact_paths: "sphere_aquaplanet_rhoe_equilmoist_gray/*"
+
+      - label: ":computer: Single column EDMF on single column"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --config column --FLOAT_TYPE Float64 --hyperdiff false --energy_name rhotheta --moist equil --turbconv edmf --split_ode false --ode_algo Euler --dt_save_to_sol 5mins --z_elem 60 --z_stretch false --z_max 3e3 --job_id edmf_single_column --dt 6secs --t_end 6hours --regression_test true"
+        artifact_paths: "edmf_single_column/*"
 
   - group: "Performance"
     steps:
