--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -44,6 +44,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 ProgressLogging = "33c8b6b6-d38a-422a-b730-caa89a2f386c"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+RRTMGP = "a01a1ee8-cea4-48fc-987c-fc7878d79da1"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 ReportMetrics = "c1654acf-408b-4272-96ce-66c258df8a6c"
 RootSolvers = "7181ea78-2dcb-4de3-ab41-2b8ab5a31e74"
