--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -38,8 +38,14 @@ steps:
 
       # TODO: Add all milestone long simulation runs
 
+      - label: ":computer: held suarez (ρe) central"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --upwinding none --fps 30 --job_id longrun_hs_rhoe_central --dt_save_to_sol 6hours"
+        artifact_paths: "longrun_hs_rhoe_central/*"
+        agents:
+          slurm_cpus_per_task: 8
+
       - label: ":computer: held suarez (ρe)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --t_end 1200days --upwinding none --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 6hours"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe --dt_save_to_sol 6hours"
         artifact_paths: "longrun_hs_rhoe/*"
         agents:
           slurm_cpus_per_task: 8
@@ -50,18 +56,26 @@ steps:
         agents:
           slurm_cpus_per_task: 8
 
-      - label: ":computer: held suarez (ρe_int)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --upwinding none --fps 30 --job_id longrun_hs_rhoeint --dt_save_to_sol 6hours"
-        artifact_paths: "longrun_hs_rhoeint/*"
+      - label: ":computer: held suarez (ρe_int) central"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --energy_name rhoe_int --t_end 1200days --upwinding none --fps 30 --job_id longrun_hs_rhoeint_central --dt_save_to_sol 6hours"
+        artifact_paths: "longrun_hs_rhoeint_central/*"
         agents:
           slurm_cpus_per_task: 8
 
   - group: "Experimental Long runs"
 
     steps:
-
-      - label: ":computer: held suarez (ρe)"
-        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_dt300 --dt_save_to_sol 6hours"
-        artifact_paths: "longrun_hs_rhoe_dt300/*"
+      
+      - label: ":computer: held suarez (ρe) hightop"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --high_top true --dt 300secs --t_end 800days --fps 30 --job_id longrun_hs_rhoe_hightop --dt_save_to_sol 6hours"
+        artifact_paths: "longrun_hs_rhoe_hightop/*"
         agents:
           slurm_cpus_per_task: 8
+
+      - label: ":computer: held suarez (ρe) equilmoist hightop"
+        command: "julia --color=yes --project=examples --threads=8 examples/hybrid/driver.jl --forcing held_suarez --moist equil --high_top true --vert_diff true --microphy 0M --dt 200secs --t_end 400days --upwinding none --fps 30 --job_id longrun_hs_rhoe_equil_hightop --dt_save_to_sol 6hours"
+        artifact_paths: "longrun_hs_rhoe_equil_hightop/*"
+        agents:
+          slurm_cpus_per_task: 8
+
+     
