--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -132,6 +132,10 @@ steps:
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --moist equil --forcing held_suarez --microphy 0M --job_id sphere_held_suarez_rhoe_equilmoist --regression_test true --dt 200secs --t_end 5days"
         artifact_paths: "sphere_held_suarez_rhoe_equilmoist/*"
 
+      - label: ":computer: held suarez (ρe) equilmoist hightop"
+        command: "julia --color=yes --project=examples examples/hybrid/driver.jl --high_top true --vert_diff true --moist equil --forcing held_suarez --microphy 0M --job_id sphere_held_suarez_rhoe_equilmoist_hightop --dt 200secs --t_end 1days"
+        artifact_paths: "sphere_held_suarez_rhoe_equilmoist_hightop/*"
+
       - label: ":computer: held suarez (ρe_int) equilmoist"
         command: "julia --color=yes --project=examples examples/hybrid/driver.jl --vert_diff true --energy_name rhoe_int --forcing held_suarez --moist equil --microphy 0M --job_id sphere_held_suarez_rhoe_int_equilmoist --regression_test true --dt 200secs --t_end 5days"
         artifact_paths: "sphere_held_suarez_rhoe_int_equilmoist/*"
